--- a/package.json
+++ b/package.json
@@ -16,8 +16,5 @@
   "bugs": {
     "url": "https://github.com/Ann-Atz/Anni-Website/issues"
   },
-  "homepage": "https://github.com/Ann-Atz/Anni-Website#readme",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+  "homepage": "https://github.com/Ann-Atz/Anni-Website#readme"
 }
